--- a/desktop.css
+++ b/desktop.css
@@ -2,7 +2,6 @@
 
 
     p {
-        font-size: 1.1rem;
         text-align: center;
     }
 
@@ -157,8 +156,8 @@
     }
 
     .newLeistungen-card {
-        width: 260px;
-        height: 260px;
+        width: 280px;
+        height: 280px;
     }
 
     #logo {
@@ -206,8 +205,8 @@
 
     #navigationBar_menuItem {
         cursor: pointer;
-        font-weight: 400;
-        font-size: 1.1rem;
+        font-weight: 500;
+        font-size: 1rem;
         height: 100%;
         padding: 15px 20px;
         display: flex;
@@ -276,14 +275,14 @@
 
         position: absolute;
         right: 300px;
-        top: 30px;
+        top: 5%;
         margin-inline: auto;
     }
 
     .header-leftBG2 {
         position: absolute;
-        bottom: 30px;
-        left: 280px;
+        bottom: 5%;
+        left: 300px;
         width: 400px;
         height: 400px;
         border-radius: 50%;
