--- a/style.css
+++ b/style.css
@@ -333,6 +333,7 @@ p {
     padding: 40px 25px;
     gap: 10px;
     background-color: rgba(255, 255, 255, 0.66);
+    background-color: red;
     position: relative;
 }
 
