--- a/style.css
+++ b/style.css
@@ -345,7 +345,8 @@ p {
 
     position: sticky;
     top: 0;
-    background-image: url("src/frederikEditLowQ.jpg");
+    //background-image: url("src/frederikEditLowQ.jpg");
+    background-color: red;
     background-size: cover;
     z-index: 0;
 }
@@ -422,7 +423,7 @@ p {
     //display: flex;
     //align-items: center;
     background-color: white;
-    //border-bottom: solid 4px rgba(0, 0, 0, 0.11);
+    border-bottom: solid 2px rgba(0, 0, 0, 0.11);
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.06);
 }
 
