--- a/style.css
+++ b/style.css
@@ -54,17 +54,23 @@ h1 {
 
 h2 {
     font-family: var(--mainFont);
-    color: var(--mainColour);
+    color: white;
     font-size: 1.2rem;
-    font-weight: 500;
+    font-weight: 400;
+    background-color: var(--ultraDarkColour);
+    border-radius: 50px;
+    text-align: center;
+    width: fit-content;
+    padding: 5px 30px;
 }
 
 h3 {
-    color: var(--darkColour);
+    color: var(--ultraDarkColour);
     font-family: var(--mainFont);
     line-height: 1.4rem;
-    font-size: .9rem;
+    font-size: 1rem;
     font-weight: 400;
+    color: white;
 }
 
 h4 {
@@ -82,7 +88,6 @@ h5 {
     line-height: 2.6rem;
     font-weight: 500;
     text-align: left;
-    margin-bottom: 8px;
 }
 
 p {
@@ -92,6 +97,16 @@ p {
     max-width: 500px;
     font-weight: 500;
     line-height: 1.6rem;
+}
+
+button {
+    width: fit-content;
+    background-color: var(--darkColour);
+    padding: .5rem 1.5rem;
+    color: white;
+    font-size: 1.2rem;
+    border: none;
+    border-radius: 5px;
 }
 
 .smallText {
@@ -346,15 +361,14 @@ p {
 }
 
 .subTitle p {
-    font-weight: 400;
+    font-weight: 500;
     font-size: 1.5rem;
 }
 
 .line {
     background-color: var(--darkColour);
-    height: 2px;
+    height: 3px;
     width: 70px;
-    margin: 1.2rem 0;
 }
 
 .moreButton {
@@ -533,6 +547,30 @@ p {
     margin: 2rem 0;
 }
 
+.physioHelpsCardIcon {
+    height: 75px;
+    text-align: center;
+
+    position: relative;
+    margin-bottom: 1rem;
+}
+
+.physioHelpsCardIconBG {
+    position: absolute;
+    background-color: #f8f8f8;
+    height: 180px;
+    width: 180px;
+
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    top: -50%;
+
+    border-radius: 50%;
+    z-index: -1;
+}
+
 .physioHelpsCard {
     color: black;
     text-align: center;
@@ -546,6 +584,10 @@ p {
     background-color: rgba(255, 0, 0, 0);
     text-align: left;
     opacity: 0;
+}
+
+.physioHelpsCard p {
+    text-align: center;
 }
 
 .cardOne {
@@ -565,6 +607,7 @@ p {
     margin-bottom: .4rem;
     font-weight: 600;
     font-family: var(--mainFont);
+    text-align: center;
 }
 
 .testi {
@@ -606,7 +649,7 @@ p {
     margin: 0;
 }
 
-.leistungenCardC {
+.leistungenCard {
     background-color: rgba(11, 33, 79, 1);
     width: 100%;
 }
@@ -652,6 +695,14 @@ p {
     padding: 40px 25px;
 }
 
+.newLeistungen p {
+    margin-bottom: 2rem;
+}
+
+.newLeistungen .line {
+    margin: .8rem 0;
+}
+
 .newLeistungenLeft {
     width: 320px;
     margin: 0 auto;
@@ -664,7 +715,9 @@ p {
     position: sticky;
     top: 8rem;
     margin-bottom: 2rem;
+    gap: .8rem;
 }
+
 
 .newLeistungenLeft h5 {
     text-align: left;
@@ -687,12 +740,13 @@ p {
     margin: 0 auto;
     //height: 300px;
     position: relative;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.31);
+    //box-shadow: 0 2px 5px rgba(0, 0, 0, 0.31);
     cursor: pointer;
     overflow: hidden;
     width: 320px;
     height: 320px;
-    border-radius: 5px;
+    border-radius: 15px;
+    border: solid 1.5px var(--ultraDarkColour);
 }
 
 .newLeistungen-card img {
@@ -717,9 +771,15 @@ p {
     padding: 12px 15px;
     width: 100%;
     height: 100%;
-    transform: translateY(255px);
+    transform: translateY(245px);
     line-height: 1.5rem;
     transition: ease-out .3s;
+}
+
+.newLeistungen-cardText p {
+    color: white;
+    font-size: .9rem;
+    font-weight: 300;
 }
 
 .newLeistungen-cardTextMouseover {
@@ -727,11 +787,20 @@ p {
 }
 
 .newLeistungen-cardTextHeadline {
-    //border-bottom: solid 1px rgba(255, 255, 255, 0.2);
-    height: 40px;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    align-items: flex-end;
+    text-align: left;
+    margin-bottom: 1rem;
+    gap: .6rem;
+}
+
+.newLeistungen-cardTextHeadline .iconi {
+    position: relative;
+    width: 50px;
+    height: 50px;
+    border-radius: 5px;
+    border: solid 1px black;
+    background-color: white;
 }
 
 .sectionRight {
@@ -1053,11 +1122,24 @@ p {
     background-size: cover;
     background-attachment: fixed;
     background-position: 200px;
+    position: relative;
+}
+
+.contactRightBG {
+    background-image: url(src/opacityTest.png);
+    background-size: cover;
+    background-position: bottom;
+    width: 60%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
 }
 
 #contact {
     //background-color: var(--ultraDarkColour);
     background-color: rgba(11, 33, 79, 0.88);
+    background-color: rgba(11, 33, 79, 1);
 }
 
 .contactRight {
