--- a/style.css
+++ b/style.css
@@ -107,6 +107,7 @@ button {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    margin-top: 20px;
 }
 
 .smallText {
@@ -168,9 +169,9 @@ button {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 20px;
-    padding: 50px 0px;
-    height: 100vh;
+    gap: 10px;
+    padding: 35% 0px;
+    //height: 100vh;
 }
 
 .overlayNavigation-item {
@@ -249,7 +250,6 @@ button {
     width: fit-content;
     padding: 35px;
     cursor: pointer;
-    background-color: black;
     border-bottom-left-radius: 50%;
     z-index: 1;
 }
@@ -712,7 +712,7 @@ button {
 
     position: sticky;
     top: 8rem;
-    gap: .8rem;
+    gap: .6rem;
 }
 
 
@@ -974,7 +974,7 @@ button {
     flex-direction: column;
     gap: 50px;
     font-family: var(--mainFont);
-    padding: 50px 0;
+    padding: 35px 0;
     text-align: center;
 }
 
@@ -1020,7 +1020,6 @@ button {
 .footerHeadline {
     color: white;
     font-weight: 500;
-    margin-bottom: 6px;
     font-size: 1.2rem;
 }
 
@@ -1160,7 +1159,7 @@ button {
 }
 
 .contactRight {
-    padding: 1.5rem;
+    padding: 2rem;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
