--- a/desktop.css
+++ b/desktop.css
@@ -283,7 +283,7 @@
         width: 400px;
         height: 400px;
         border-radius: 50%;
-        background-color: rgba(23, 46, 96, 0.03);
+        //background-color: rgba(23, 46, 96, 0.03);
 
         position: absolute;
         right: 300px;
@@ -298,7 +298,7 @@
         width: 400px;
         height: 400px;
         border-radius: 50%;
-        background-color: rgba(23, 46, 96, 0.03);
+        //background-color: rgba(23, 46, 96, 0.03);
 
         position: absolute;
         //margin-inline: auto;
