--- a/style.css
+++ b/style.css
@@ -293,15 +293,49 @@ button {
     margin: 0 auto;
 }
 
-#header-left {}
+#header-left {
+    position: relative;
+    overflow: hidden;
+}
+
+.header-leftBG {
+    //bottom: 5%;
+    //left: 300px;
+
+
+    right: 50%;
+    top: -40px;
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    background-color: rgba(23, 46, 96, 0.03);
+    position: absolute;
+}
+
+.header-leftBG2 {
+    bottom: 0px;
+    left: 50%;
+
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    background-color: rgba(23, 46, 96, 0.03);
+    position: absolute;
+}
 
 #header-left img {
     width: 100%;
     height: 100%;
+
+    width: 320px;
+    height: 320px;
+    border-radius: 50%;
+
     object-fit: cover;
     object-position: 0 0;
     display: block;
-    margin: 0 auto 0 auto;
+    margin: 50px auto;
+    z-index: 1;
 }
 
 #header-right {}
