--- a/desktop.css
+++ b/desktop.css
@@ -272,6 +272,8 @@
         justify-content: center;
         flex-direction: column;
         position: relative;
+
+        overflow: visible;
     }
 
     #header-right {
