--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ h2 {
     color: var(--darkColour);
     font-size: 1.2rem;
     font-weight: 600;
-    text-align: center;
+    text-align: left;
 }
 
 h3 {
