--- a/style.css
+++ b/style.css
@@ -92,7 +92,6 @@ p {
     font-family: var(--secondFont);
     font-size: 1rem;
     text-align: left;
-    max-width: 500px;
     font-weight: 500;
     line-height: 1.6rem;
 }
@@ -106,7 +105,6 @@ button {
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    margin-top: 20px;
 }
 
 .smallText {
@@ -333,8 +331,10 @@ button {
     object-fit: cover;
     object-position: 0 0;
     display: block;
-    margin: 20px auto;
+    margin: 40px auto;
     z-index: 1;
+    border: solid 3px white;
+    outline: solid 15px var(--darkColour);
 }
 
 #header-right {}
@@ -378,24 +378,14 @@ button {
     flex-direction: column;
     justify-content: center;
     padding: 40px 25px;
-    gap: 10px;
+    gap: 20px;
 }
 
-.subTitle {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    color: var(--darkColour);
-    //margin-bottom: 10px;
-}
-
-.subTitle .line {
-    width: 30px;
-}
 
 .subTitle p {
     font-weight: 500;
     font-size: 1.5rem;
+    color: rgba(128, 128, 128, 0.50);
 }
 
 .line {
@@ -410,9 +400,8 @@ button {
     border: none;
     border-radius: 100px;
     cursor: pointer;
-    margin: 30px 0 0 0;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.19);
-    padding: .5rem .5rem .5rem 1.2rem;
+    //padding: .5rem .5rem .5rem 1.2rem;
     display: flex;
     align-items: center;
     gap: 1rem;
@@ -577,7 +566,7 @@ button {
     display: flex;
     flex-direction: column;
     gap: 7rem;
-    margin: 6rem 0 2rem 0;
+    margin: 6rem auto 2rem auto;
 }
 
 .physioHelpsCardIcon {
@@ -729,7 +718,7 @@ button {
     width: 100%;
     margin: 0 auto;
     max-width: var(--maxWidth);
-    padding: 40px 25px;
+    padding: 40px 30px;
 }
 
 .newLeistungen p {}
@@ -739,7 +728,6 @@ button {
 }
 
 .newLeistungenLeft {
-    width: 320px;
     margin: 0 auto 6rem auto;
 }
 
@@ -780,7 +768,7 @@ button {
     width: 320px;
     height: 320px;
     border-radius: 15px;
-    border: solid 1.5px var(--ultraDarkColour);
+    border: solid 1px var(--ultraDarkColour);
 }
 
 
@@ -1057,7 +1045,6 @@ button {
 .footerHeadline {
     color: white;
     font-weight: 500;
-    font-size: 1.2rem;
 }
 
 .footerHeadlineSocial {
