--- a/desktop.css
+++ b/desktop.css
@@ -106,6 +106,10 @@
         padding: 15px 15px;
     }
 
+    .titleSubtitle {
+        transform: translate(-80px);
+    }
+
     #header-emptyTop {
         width: 100%;
         height: 100px;
@@ -311,11 +315,20 @@
 
     }
 
-    #header-left img {
+    .imgBox {
         height: 550px;
         width: 550px;
+    }
+
+    .darkCircle,
+    .brightCircle {
+        display: block;
+    }
+
+    #header-left img {
+
         border-radius: 50%;
-        box-shadow: 3px 3px 5px lightGrey;
+        //box-shadow: 3px 3px 5px lightGrey;
         z-index: 1;
     }
 
