--- a/style.css
+++ b/style.css
@@ -295,11 +295,39 @@ button {
     overflow: hidden;
 }
 
+.imgBox {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    width: 360px;
+    height: 360px;
+    margin: 40px auto;
+    position: relative;
+}
+
+.darkCircle {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+
+    border: solid 13px rgba(0, 0, 0, 0.2);
+    border-radius: 50%;
+}
+
+.brightCircle {
+    width: 95%;
+    height: 95%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    border: solid 6px rgba(255, 255, 255, 0.4);
+
+    border-radius: 50%;
+}
+
 .header-leftBG {
-    //bottom: 5%;
-    //left: 300px;
-
-
     right: 50%;
     top: -40px;
     width: 250px;
@@ -324,17 +352,11 @@ button {
     width: 100%;
     height: 100%;
 
-    width: 380px;
-    height: 380px;
     border-radius: 50%;
 
     object-fit: cover;
     object-position: 0 0;
     display: block;
-    margin: 40px auto;
-    z-index: 1;
-    border: solid 3px white;
-    outline: solid 15px var(--darkColour);
 }
 
 #header-right {}
@@ -381,6 +403,10 @@ button {
     gap: 20px;
 }
 
+.subTitle {
+    margin-top: 5px;
+}
+
 
 .subTitle p {
     font-weight: 500;
@@ -401,7 +427,7 @@ button {
     border-radius: 100px;
     cursor: pointer;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.19);
-    //padding: .5rem .5rem .5rem 1.2rem;
+    padding: .5rem .5rem .5rem 1.2rem;
     display: flex;
     align-items: center;
     gap: 1rem;
@@ -738,11 +764,6 @@ button {
     position: sticky;
     top: 8rem;
     gap: .6rem;
-}
-
-
-.newLeistungenLeft h5 {
-    text-align: left;
 }
 
 .newLeistungenRight {
