--- a/tablet.css
+++ b/tablet.css
@@ -226,6 +226,7 @@
     .newLeistungen p {
         text-align: center;
         width: 80%;
+        margin: 0 auto;
     }
 
     .newLeistungenRight {
