--- a/desktop.css
+++ b/desktop.css
@@ -106,10 +106,6 @@
         padding: 15px 15px;
     }
 
-    .titleSubtitle {
-        transform: translate(-80px);
-    }
-
     #header-emptyTop {
         width: 100%;
         height: 100px;
@@ -148,8 +144,6 @@
         padding: 0;
     }
 
-    .newLeistungen p {}
-
     .newLeistungen h5 {
         text-align: left;
         width: 100%;
@@ -159,6 +153,7 @@
     .newLeistungen p {
         text-align: left;
         width: 100%;
+        margin: 1rem 0;
     }
 
     .newLeistungenRight {
