--- a/style.css
+++ b/style.css
@@ -82,9 +82,9 @@ h5 {
     color: var(--darkColour);
     font-family: var(--mainFont);
     font-size: 2.2rem;
-    line-height: 2.6rem;
     font-weight: 500;
     text-align: left;
+    margin-bottom: 1rem;
 }
 
 p {
@@ -104,6 +104,15 @@ button {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+}
+
+.justAButton {
+    width: fit-content;
+    background-color: var(--darkColour);
+    padding: .6rem 1.5rem;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 1.5rem 0;
 }
 
 .smallText {
@@ -747,10 +756,6 @@ button {
     margin: 0 auto;
 }
 
-.newLeistungen p {
-    margin: 1rem 0;
-}
-
 .newLeistungen .line {
     margin: .8rem 0;
 }
@@ -1195,6 +1200,7 @@ button {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
+    padding: 30px;
 }
 
 .contactRight-cards {
@@ -1208,6 +1214,8 @@ button {
     margin: 0 auto;
     color: white;
     font-size: 2.5rem;
+    display: flex;
+    gap: 1rem;
 }
 
 .contactRight-cardHeadline {
