--- a/desktop.css
+++ b/desktop.css
@@ -44,7 +44,7 @@
 
     .navigationBar_inner {
 
-        //width: var(--contentWidth);
+        width: var(--contentWidth);
         max-width: var(--maxWidth);
         margin: 15px auto;
 
@@ -114,7 +114,7 @@
     }
 
     #physioHelpsWrapper {
-        padding: 8rem 0;
+        //padding: 8rem 0;
         //clip-path: polygon(100% 0, 100% 85%, 35% 100%, 0% 85%, 0 0);
     }
 
@@ -133,8 +133,8 @@
         max-width: 100%;
     }
 
-    #newLeistungenWrapper {
-        padding: 7rem 0;
+    .cardOne {
+        max-width: 0;
     }
 
     .newLeistungen {
@@ -308,13 +308,13 @@
     }
 
     .imgBox {
-        height: 550px;
-        width: 550px;
+        height: 580px;
+        width: 580px;
     }
 
     .darkCircle,
     .brightCircle {
-        display: block;
+        display: none;
     }
 
     #header-left img {
@@ -322,6 +322,7 @@
         border-radius: 50%;
         //box-shadow: 3px 3px 5px lightGrey;
         z-index: 1;
+        border: solid 4px white;
     }
 
     .headerItemWrapper {
@@ -380,6 +381,8 @@
     .sectionWrapper {
         width: var(--contentWidth);
         max-width: var(--maxWidth);
+
+        padding: 9rem 0;
     }
 
     #logo2 {
@@ -659,6 +662,14 @@
         font-size: .9rem;
         line-height: 1.4rem;
         width: 100%;
+    }
+
+    .flexBox {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 8rem;
+        margin-top: 6rem;
     }
 
     /*    FONTAWESOME    */
