--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
     //--secondFont: "DM Sans", serif;
     //--mainFont: 'Josefin Sans', sans-serif;
     --contentWidth: 80%;
-    --maxWidth: 1200px;
+    --maxWidth: 1250px;
 }
 
 * {
@@ -84,7 +84,7 @@ h5 {
     font-size: 2.2rem;
     font-weight: 500;
     text-align: left;
-    margin-bottom: 1rem;
+    margin-bottom: .3rem;
 }
 
 p {
@@ -93,6 +93,8 @@ p {
     text-align: left;
     font-weight: 500;
     line-height: 1.6rem;
+    color: #414141;
+    color: rgba(0, 0, 0, 0.80);
 }
 
 button {
@@ -297,6 +299,7 @@ button {
 
 #header_inner {
     width: 100%;
+    max-width: 1200px;
 }
 
 #header-left {
@@ -307,10 +310,10 @@ button {
 .imgBox {
     width: 100%;
     height: 100%;
-    border-radius: 50%;
-    width: 360px;
-    height: 360px;
-    margin: 40px auto 0 auto;
+    //border-radius: 50%;
+    //width: 360px;
+    //height: 360px;
+    //margin: 40px auto 0 auto;
     position: relative;
 }
 
@@ -322,6 +325,7 @@ button {
 
     border: solid 13px rgba(0, 0, 0, 0.1);
     border-radius: 50%;
+    display: none;
 }
 
 .brightCircle {
@@ -334,6 +338,7 @@ button {
     border: solid 4px rgba(255, 255, 255, 0.2);
 
     border-radius: 50%;
+    display: none;
 }
 
 .header-leftBG {
@@ -360,8 +365,6 @@ button {
 #header-left img {
     width: 100%;
     height: 100%;
-
-    border-radius: 50%;
 
     object-fit: cover;
     object-position: 0 0;
@@ -408,18 +411,18 @@ button {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 1.5rem;
+    gap: .5rem;
 }
 
 .subTitle {
-    margin-top: 5px;
+    margin-top: 8px;
 }
 
 
 .subTitle p {
     font-weight: 500;
     font-size: 1.5rem;
-    color: rgba(128, 128, 128, 0.50);
+    color: rgba(128, 128, 128, 0.70);
 }
 
 .line {
@@ -440,6 +443,7 @@ button {
     align-items: center;
     gap: 1rem;
     overflow: hidden;
+    margin-top: 1.5rem;
 }
 
 .moreButton p {
@@ -843,7 +847,7 @@ button {
     align-items: flex-end;
     text-align: left;
     margin-bottom: 1.5rem;
-    gap: .6rem;
+    gap: 1rem;
 }
 
 .iconi {
@@ -1377,6 +1381,14 @@ button {
 
 .navigationBarBelow {
     display: none;
+}
+
+.flexBox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 4rem;
+    gap: 4rem;
 }
 
 
