--- a/desktop.css
+++ b/desktop.css
@@ -322,7 +322,7 @@
         border-radius: 50%;
         //box-shadow: 3px 3px 5px lightGrey;
         z-index: 1;
-        border: solid 4px white;
+        box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.15);
     }
 
     .headerItemWrapper {
