--- a/style.css
+++ b/style.css
@@ -600,7 +600,7 @@ button {
 
 .sectionWrapper {
     //background-color: red !important;
-    padding: 3rem 2rem;
+    padding: 2rem 2rem;
 }
 
 .physioHelpsCards {
@@ -1401,4 +1401,166 @@ button {
 
 .white {
     color: white;
+}
+
+
+
+
+.loader-wrapper {
+    width: 100%;
+    height: 100%;
+    background-color: var(--ultraDarkColour);
+    background-color: #f0f0f0;
+    position: fixed;
+    z-index: 999;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.blueDot10 {
+    width: 3px;
+    height: 3px;
+    background-color: black;
+    border-radius: 50%;
+    position: absolute;
+
+    margin: auto;
+    top: 0;
+    bottom: 177.5px;
+    left: 73px;
+    right: 0;
+}
+
+.blueDot9 {
+    width: 5px;
+    height: 5px;
+    background-color: black;
+    border-radius: 50%;
+    position: absolute;
+
+    margin: auto;
+    top: 0;
+    bottom: 140.5px;
+    left: 86px;
+    right: 0;
+}
+
+.blueDot8 {
+    width: 7px;
+    height: 7px;
+    background-color: black;
+    border-radius: 50%;
+    position: absolute;
+
+    margin: auto;
+    top: 0;
+    bottom: 100px;
+    left: 91px;
+    right: 0;
+}
+
+.blueDot7 {
+    width: 9px;
+    height: 9px;
+    background-color: black;
+    border-radius: 50%;
+    position: absolute;
+
+    margin: auto;
+    top: 0;
+    bottom: 54px;
+    left: 84px;
+    right: 0;
+}
+
+.blueDot6 {
+    width: 12px;
+    height: 12px;
+    background-color: black;
+    border-radius: 50%;
+    position: absolute;
+
+    margin: auto;
+    top: 0;
+    bottom: 13.5px;
+    left: 53px;
+    right: 0;
+}
+
+.blueDot5 {
+    width: 18px;
+    height: 18px;
+    background-color: black;
+    border-radius: 50%;
+    position: absolute;
+
+    margin: auto;
+    top: 20.5px;
+    bottom: 0;
+    left: 8.5px;
+    right: 0;
+}
+
+
+.blueDot4 {
+    width: 10px;
+    height: 10px;
+    background-color: black;
+    border-radius: 50%;
+    position: absolute;
+
+    margin: auto;
+    top: 52px;
+    bottom: 0;
+    left: 0;
+    right: 35px;
+}
+
+.blueDot3 {
+    width: 8px;
+    height: 8px;
+    background-color: black;
+    border-radius: 50%;
+    position: absolute;
+
+    margin: auto;
+    top: 92px;
+    bottom: 0;
+    left: 0;
+    right: 55px;
+}
+
+.blueDot2 {
+    width: 5px;
+    height: 5px;
+    background-color: black;
+    border-radius: 50%;
+    position: absolute;
+
+    margin: auto;
+    top: 134px;
+    bottom: 0;
+    left: 0;
+    right: 60px;
+}
+
+.blueDot1 {
+    width: 3.5px;
+    height: 3.5px;
+    background-color: black;
+    border-radius: 50%;
+    position: absolute;
+
+    margin: auto;
+    top: 173px;
+    bottom: 0;
+    left: 0;
+    right: 62px;
+}
+
+.blueDots > * {
+    transition: background-color 1s ease;
+    /* 1 second fade */
 }
