--- a/tablet.css
+++ b/tablet.css
@@ -257,7 +257,7 @@
     .contactRight-cards {
         grid-template-columns: auto auto;
         gap: 15px 30px;
-        margin: 1rem 0 3rem 0;
+        margin: .5rem 0 3rem 0;
     }
 
 
