--- a/style.css
+++ b/style.css
@@ -600,7 +600,7 @@ button {
 
 .sectionWrapper {
     //background-color: red !important;
-    padding: 2rem 2rem;
+    padding: 2rem 2rem 4rem 2rem;
 }
 
 .physioHelpsCards {
