--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
     --mainColour: #0064b1;
     --darkColour: #172E60;
     --ultraDarkColour: #0b214f;
-    --lightColour: #f8f8f8;
-    --lightColour: #f5f5f7;
+    --lightColour: #fcfcfc;
+    //--lightColour: #f5f5f7;
     //--lightColour: #f5fbff;
     --verylightColour: #E6F1FA;
     --lightGrey: rgba(0, 0, 0, 0.02);
@@ -48,7 +48,7 @@ h1 {
     font-family: var(--mainFont);
     color: var(--darkColour);
 
-    font-weight: 420;
+    font-weight: 400;
     font-size: 2.5rem;
     animation: 1s ease-out 0s 1 slideInFromLeft;
 }
@@ -283,7 +283,6 @@ button {
     position: relative;
     display: flex;
     flex-direction: column;
-    background-color: var(--lightColour);
 }
 
 #header {
@@ -308,7 +307,7 @@ button {
 }
 
 .testCircleWrapper {
-    height: 460px;
+    height: 410px;
     width: 100%;
 
     position: relative;
@@ -317,8 +316,7 @@ button {
 }
 
 .testCircle {
-    background-color: rgba(0, 0, 0, 0.02);
-    width: 800px;
+    width: 700px;
     height: 100%;
 
     position: absolute;
@@ -329,14 +327,15 @@ button {
     border-bottom-right-radius: 50%;
     border-bottom-left-radius: 50%;
     overflow: hidden;
-    border: solid 2px #ededed;
 
+    background-color: var(--lightColour);
+    background-color: #F7F7F7;
 }
 
 .testCircle img {
     object-fit: cover;
-    width: 400px;
-    height: 400px;
+    width: 350px;
+    height: 350px;
 
     position: absolute;
     right: 0;
@@ -350,9 +349,6 @@ button {
     border: solid 3px white;
 
 }
-
-
-
 
 .imgBox {
     width: 100%;
@@ -496,7 +492,7 @@ button {
     align-items: center;
     gap: 1rem;
     overflow: hidden;
-    margin-top: 1.5rem;
+    margin-top: 1.4rem;
 }
 
 .moreButton p {
@@ -526,15 +522,16 @@ button {
 
 .navigationBar {
     font-family: var(--mainFont);
-    background-color: white;
     position: relative;
     width: 100%;
     z-index: 1;
     //display: flex;
     //align-items: center;
-    background-color: white;
     //border-bottom: solid 1px rgba(0, 0, 0, 0.04);
     //box-shadow: 0 2px 2px rgba(0, 0, 0, 0.02);
+
+    background-color: var(--lightColour);
+    background-color: #F7F7F7;
 }
 
 .navigationBar_inner {
@@ -623,10 +620,11 @@ button {
 
 
 #physioHelpsWrapper {
-    //background-color: var(--secondary);
     //clip-path: polygon(100% 0, 100% 95%, 35% 100%, 0% 95%, 0 0);
     position: relative;
     overflow: hidden;
+    background-color: var(--lightColour);
+
 }
 
 .physioHelps {
@@ -674,7 +672,7 @@ button {
 
 .physioHelpsCardIconBG {
     position: absolute;
-    background-color: #f8f8f8;
+    background-color: var(--lightGrey);
     height: 0px;
     width: 0px;
 
@@ -804,7 +802,6 @@ button {
 
 #newLeistungenWrapper {
     width: 100%;
-    background-color: var(--lightColour);
 }
 
 .newLeistungen {
@@ -852,7 +849,7 @@ button {
     overflow: hidden;
     width: 320px;
     height: 320px;
-    border-radius: 15px;
+    border-radius: 10px;
     border: solid 1px var(--ultraDarkColour);
 }
 
